Update Settings “main”

--- a/config.yml
+++ b/config.yml
@@ -10,8 +10,8 @@ params:
     with AI technology.
   description_header: >-
     Information about <a class='text-grey-darkest' title='Visit triporate.com'
-    href='https://triporate.com/'>example</a> systems operations.<br />Follow us
-    <a class='text-grey-darkest' title='Visit our page on Twitter'
+    href='https://triporate.com/'>triporate</a> systems operations.<br />Follow
+    us <a class='text-grey-darkest' title='Visit our page on Twitter'
     href='https://www.twitter.com/triporate'>on Twitter</a> or subscribe to <a
     class='text-grey-darkest' href='%s' >RSS</a><br />to be alerted of new
     events.
